--- a/index.html
+++ b/index.html
@@ -14,55 +14,60 @@
 
 <body>
   <div class="container">
-    <div class="site-header">
-      <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+  <header class="site-header">
+    <h1>Jam Box Studios</h1>   
+      <nav class="main-nav">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Reservation</a></li>
           <li><a href="#">Studio</a></li>
         </ul>
-      </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
+      </nav>
+      <img src="https://placekitten.com/1200/900" alt="banner" class="banner">
+    </header>
     </div>
-    <div class="main-content">
-      <h1>Welcome to Jam Box</h1>
+  
+    <main class="main-content">
+      <h2>Welcome to Jam Box</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
-      <div class="owner">
-        <h1>Meet the owner</h1>
+      
+      <section class="owner">
+        <h3>Meet the owner</h3>
         <ul>
           <li>Name: John Doe</li>
           <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+          <li>Email: <a href="johnjoe@jambox.ca">johnjoe@jambox.ca</a></li>
+          <li>Phone: <a href=="613-000-0000">613-000-0000</a></li>
         </ul>
-        <h1>Address</h1>
-        <p>
+        <h3>Address</h3>
+        <address>
           Jambox Studios
           123 Guitar Road,
           Musicville, Danceistan
           B3T 0L0
-        </p>
-      </div>
-      <div class="contact-section">
-        <h1>Contact Us</h1>
+        </address>
+      </section>
+
+      <section class="contact-section">
+        <h3>Contact Us</h3>
         <form action="thanks.html">
-          <label>Full Name</label>
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Email">
-          <input type="text" placeholder="Subject">
-          <b>Your Message</b>
-          <textarea></textarea>
+          <label for="fullname">Full Name</label>
+          <input type="text" id="fullname" name="fullname" placeholder="Full Name">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Email">
+          <label for="subject">Subject</label>
+          <input type="subject" id="subject" name="subject" placeholder="Subject">
+          <label for="message">Your Message</label>
+          <textarea id="message" name="message"></textarea>
           <button type="submit">Send</button>
         </form>
-      </div>
-    </div>
-    <div class="site-footer">
-      &copy; 2021 Jam Box Studios
-    </div>
+      </section>
+    </main>
+    <footer class="site-footer">
+      &copy; 2024 Jam Box Studios
+    </footer>
   </div>
 </body>
-
 </html>
