--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+  <a href="#skip-to-content" class="skip-link">Skip to Content</a>
+  <a href="#skip-to-nav" class="skip-link">Skip to Navigation</a>
+
   <div class="container">
   <header class="site-header">
     <h1>Jam Box Studios</h1>   
